nes-systests/systest/tests/testdata/errors/MultipleCorrectAndIncorrect.dummy
Source stream UINT64 id UINT64 value INLINE
1,2

SINK ID_VALUE_SINK UINT64 stream$id UINT64 stream$value
SINK ID_SINK UINT64 stream$id
SINK VALUE_SINK UINT64 stream$value

# Correct
SELECT id, value FROM stream INTO ID_VALUE_SINK
----
1 2

# Incorrect
SELECT id, value FROM stream INTO ID_VALUE_SINK
----

# Incorrect
SELECT id, value FROM stream INTO ID_VALUE_SINK
----
2 1

# Incorrect
SELECT id FROM stream INTO ID_VALUE_SINK
----
1

# Correct
SELECT id FROM stream INTO ID_SINK
----
1

# Correct
SELECT value FROM stream INTO VALUE_SINK
----
2

# Incorrect
SELECT value FROM stream INTO ID_VALUE_SINK
----
1 2

# Correct
SELECT id, value FROM stream WHERE id > UINT64(3) INTO ID_VALUE_SINK
----

